--- a/app/src/main/res/drawable/round_back_white10_20.xml
+++ b/app/src/main/res/drawable/round_back_white10_20.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#CBBDE4"/>
+    <solid android:color="@color/mainButton"/>
     <corners android:radius="20dp"/>
 </shape>
