--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     android:padding="15dp"
     android:onClick="closeKeyboard"
-    tools:context=".Login">
+    tools:context=".Login"
+    android:background="@color/mainBackground">
     
     <TextView
         android:text="@string/login"
@@ -46,7 +47,10 @@
         android:id="@+id/btn_login"
         android:text="@string/login"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/mainButton"
+        android:textColor="@color/mainText"
+        />
 
     <TextView
         android:id="@+id/resetPassword"
