--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mainBackground"
     tools:context=".MainActivity">
 
 
@@ -31,6 +32,7 @@
         android:text="Tekstas tralala"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
+        android:textColor="@color/mainText"
         />
 
     <Button
@@ -38,7 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:text="Profile"/>
+        android:text="Profile"
+        android:backgroundTint="@color/mainButton"
+        android:textColor="@color/mainText"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
