--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -33,13 +33,15 @@
         android:background="@drawable/baseline_settings_24"
         android:foreground="@drawable/baseline_settings_24"
         android:layout_alignParentRight="true"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="RtlHardcoded"
+        android:backgroundTint="@color/mainButton"/>
 
     <Button
         android:id="@+id/Profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:backgroundTint="@color/mainButton"
         android:text="Profile"/>
 
 </RelativeLayout>
