--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,7 @@
     android:gravity="center"
     android:layout_height="match_parent"
     android:padding="15dp"
+    android:background="@color/mainBackground"
     android:onClick="closeKeyboard"
     tools:context=".Register">
 
@@ -16,6 +17,7 @@
         android:textStyle="bold"
         android:gravity="top|center_horizontal"
         android:layout_width="match_parent"
+        android:textColor="@color/mainText"
         android:layout_height="wrap_content" />
 
 
@@ -24,12 +26,14 @@
             android:hint="@string/email"
             android:layout_width="match_parent"
             android:inputType="text"
+            android:textColor="@color/mainText"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:hint="@string/password"
             android:layout_width="match_parent"
+            android:textColor="@color/mainText"
             android:layout_height="wrap_content"
             android:inputType="textPassword"/>
 
@@ -37,6 +41,7 @@
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/mainText"
             android:inputType="text"
             android:hint="Username" />
 
@@ -48,9 +53,11 @@
 
     <Button
         android:id="@+id/btn_register"
-        android:text="@string/register"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/mainButton"
+        android:textColor="@color/mainText"
+        android:text="@string/register" />
 
     <TextView
         android:textStyle="bold"
@@ -59,6 +66,7 @@
         android:id="@+id/loginNow"
         android:text="@string/click_to_login"
         android:layout_width="match_parent"
+        android:textColor="@color/mainText"
         android:layout_height="wrap_content"
         android:textAlignment="center"/>
 
