--- a/app/src/main/res/layout/reset_popup.xml
+++ b/app/src/main/res/layout/reset_popup.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/Email_reset"
+        android:textColor="@color/mainText"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
