--- a/app/src/main/res/layout/row_post_item.xml
+++ b/app/src/main/res/layout/row_post_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/mainBackground"
     android:layout_height="250dp">
 
     <ImageView
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:text="TextView"
-        android:textColor="#fff"
+        android:textColor="@color/mainText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -44,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="26dp"
         android:text="0"
-        android:textColor="#fff"
+        android:textColor="@color/mainText"
         app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -57,6 +58,7 @@
         android:text="+1"
         app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/mainButton"
         app:layout_constraintTop_toTopOf="@+id/row_post_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
