--- a/app/src/main/res/layout/activity_voted_posts.xml
+++ b/app/src/main/res/layout/activity_voted_posts.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainBackground"
     tools:context=".MainActivity">
 
 
@@ -26,32 +25,11 @@
         tools:ignore="RtlHardcoded" />
 
     <Button
-        android:id="@+id/VotedPosts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
-        android:text="Events" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timer"
-        android:text="Tekstas tralala"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/mainText"
-        />
-
-    <Button
         android:id="@+id/Profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:text="Profile"
-        android:backgroundTint="@color/mainButton"
-        android:textColor="@color/mainText"
-        />
+        android:text="Profile"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
