Dadetas vote mygtukas viduje post'o

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -8,12 +8,12 @@
 
     <ImageView
         android:id="@+id/row_post_image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="407dp"
+        android:layout_height="678dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -47,7 +47,7 @@
         android:id="@+id/location"
         android:layout_width="305dp"
         android:layout_height="93dp"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="84dp"
         android:text="TextView"
         android:textColor="@color/mainText"
@@ -71,7 +71,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Vietovė:"
         android:textColor="@color/mainText"
@@ -93,13 +93,23 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_width="414dp"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="140dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/row_post_image"
         app:menu="@menu/bottom_nav_menu"
         tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/vote_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="60dp"
+        android:text="+1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
