--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -109,6 +109,7 @@
         android:layout_marginTop="144dp"
         android:layout_marginEnd="60dp"
         android:text="+1"
+        android:src="@drawable/lb_ic_thumb_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
