--- a/app/src/main/res/layout/row_post_item.xml
+++ b/app/src/main/res/layout/row_post_item.xml
@@ -53,9 +53,9 @@
     <Button
         android:id="@+id/VoteFor"
         android:layout_width="70dp"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="4dp"
-        android:text="+1"
+        android:background="@drawable/lb_ic_thumb_up"
         app:layout_constraintBottom_toBottomOf="@+id/row_post_image"
         app:layout_constraintEnd_toEndOf="parent"
         android:backgroundTint="@color/mainButton"
