Added events list and info when clicked

--- a/app/src/main/res/layout/activity_voted_posts.xml
+++ b/app/src/main/res/layout/activity_voted_posts.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/postRV"
+        android:id="@+id/eventRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"
