Minimalus display pakeitimas

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -8,12 +8,12 @@
 
     <ImageView
         android:id="@+id/row_post_image"
-        android:layout_width="407dp"
-        android:layout_height="678dp"
+        android:layout_width="433dp"
+        android:layout_height="699dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -23,10 +23,10 @@
         android:id="@+id/row_post_title"
         android:layout_width="139dp"
         android:layout_height="42dp"
-        android:layout_marginStart="224dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="520dp"
         android:text="TextView"
-        android:textColor="@color/mainText"
+        android:textColor="@color/white"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,22 +35,22 @@
         android:id="@+id/votes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="252dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="588dp"
         android:text="0"
-        android:textColor="@color/mainText"
+        android:textColor="@color/white"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/location"
-        android:layout_width="305dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="182dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="436dp"
         android:text="TextView"
-        android:textColor="@color/mainText"
+        android:textColor="@color/white"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -59,10 +59,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="248dp"
-        android:text="Pavadinimas:"
-        android:textColor="@color/mainText"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="520dp"
+        android:text="Name:"
+        android:textColor="@color/white"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -71,10 +71,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Vietovė:"
-        android:textColor="@color/mainText"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="456dp"
+        android:text="Location:"
+        android:textColor="@color/white"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -83,33 +83,35 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="312dp"
-        android:text="Balsų skaičius:"
-        android:textColor="@color/mainText"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="588dp"
+        android:text="Vote count:"
+        android:textColor="@color/white"
         android:textSize="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="414dp"
-        android:layout_height="55dp"
+        android:layout_width="445dp"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="140dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/row_post_image"
-        app:menu="@menu/bottom_nav_menu"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
     <Button
         android:id="@+id/vote_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="60dp"
+        android:layout_width="89dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="576dp"
+        android:layout_marginEnd="12dp"
+        android:background="@drawable/baseline_thumb_up_24"
+        android:foreground="@drawable/baseline_thumb_up_24"
         android:text="+1"
-        android:src="@drawable/lb_ic_thumb_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
