--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
         android:id="@+id/timer"
         android:text="Tekstas tralala"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="165dp"
         android:textColor="@color/mainText"
         />
 
