--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -41,4 +41,14 @@
         android:layout_alignParentStart="true"
         android:text="Profile"/>
 
+    <TextView
+        android:id="@+id/distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_alignParentRight="true"
+        android:text=""
+        android:textSize="20dp" />
+
+
 </RelativeLayout>
