Bug fixed regarding the display and post's were seperated from each other

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="800dp"
+    android:layout_height="match_parent"
     android:background="@color/mainBackground">
 
     <ImageView
         android:id="@+id/row_post_image"
-        android:layout_width="409dp"
-        android:layout_height="533dp"
+        android:layout_width="414dp"
+        android:layout_height="370dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,73 +20,76 @@
 
     <TextView
         android:id="@+id/row_post_title"
-        android:layout_width="139dp"
+        android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="208dp"
-        android:layout_marginTop="376dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="416dp"
         android:text="TextView"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_200"
         android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/votes"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="208dp"
-        android:layout_marginTop="440dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="464dp"
         android:text="0"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_200"
         android:textSize="32dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/location"
-        android:layout_width="182dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="208dp"
-        android:layout_marginTop="300dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="372dp"
         android:text="TextView"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_200"
         android:textSize="32dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="376dp"
+        android:layout_marginTop="416dp"
         android:text="Name:"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_200"
         android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="372dp"
         android:text="Location:"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_200"
         android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="464dp"
         android:text="Vote count:"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_200"
         android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,7 +98,7 @@
         android:layout_width="440dp"
         android:layout_height="77dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="208dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -106,7 +109,7 @@
         android:id="@+id/vote_button"
         android:layout_width="89dp"
         android:layout_height="95dp"
-        android:layout_marginTop="416dp"
+        android:layout_marginTop="264dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/baseline_thumb_up_24"
         android:foreground="@drawable/baseline_thumb_up_24"
