--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -14,7 +14,7 @@
     <color name="selected_background">#ffaa3f</color>
     <color name="default_background">#3d3d3d</color>
 
-    <color name="mainBackground">#FFFFFF</color>
-    <color name="mainText">#000000</color>
-    <color name="mainButton">#B18BF6</color>
+    <color name="mainBackground">#3A3A3A</color>
+    <color name="mainText">#FFFFFF</color>
+    <color name="mainButton">#325C5A</color>
 </resources>
