--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,8 +29,8 @@
     <color name="dark_mode_text">#FFFFFFFF</color>
 
 
-    <color name="mainBackground">#3A3A3A</color>
-    <color name="mainText">#FFFFFF</color>
-    <color name="mainButton">#325C5A</color>
+    <color name="mainBackground">#FFFFFF</color>
+    <color name="mainText">#000000</color>
+    <color name="mainButton">#B18BF6</color>
 
 </resources>
