--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
         android:gravity="center"
         android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/mainText"/>
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -27,7 +28,9 @@
             android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:inputType="text"
-            android:hint="@string/email" />
+            android:textColor="@color/mainText"
+            android:hint="@string/email"
+            android:textColorHint="@color/mainText"/>
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -35,7 +38,9 @@
             android:hint="@string/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+            android:textColor="@color/mainText"
+            android:inputType="textPassword"
+            android:textColorHint="@color/mainText"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -61,7 +66,8 @@
         android:text="@string/forgot_password"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:textColor="@color/mainText"/>
 
     <TextView
         android:textStyle="bold"
@@ -71,7 +77,8 @@
         android:id="@+id/registerNow"
         android:text="@string/click_to_register"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/mainText"/>
 
 
 </LinearLayout>
