--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="60dp"
+        android:textColor="@color/mainText"
+        android:backgroundTint="@color/mainButton"
         android:text="Events" />
 
     <TextView
@@ -52,6 +54,7 @@
         android:text="Profile"
         android:backgroundTint="@color/mainButton"
         android:textColor="@color/mainText"
+        android:layout_marginLeft="5dp"
         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
