--- a/app/src/main/res/layout/activity_points_shop2.xml
+++ b/app/src/main/res/layout/activity_points_shop2.xml
@@ -64,7 +64,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:textColor="@color/mainText"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
@@ -76,7 +76,8 @@
             android:text="Current point amount:"
             android:textColor="@color/mainText"
             android:textSize="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="30dp"/>
 
         <TextView
             android:id="@+id/pointCountView"
@@ -84,7 +85,8 @@
             android:layout_height="30dp"
             android:textColor="@color/mainText"
             android:text=""
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:layout_marginTop="30dp"/>
 
     </LinearLayout>
 
