--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
             android:textSize="25dp"
+            android:textColor="@color/mainText"
             android:text="" />
 
         <TextView
@@ -74,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
             android:textSize="25dp"
+            android:textColor="@color/mainText"
             android:text="" />
 
         <TextView
@@ -92,6 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
             android:textSize="25dp"
+            android:textColor="@color/mainText"
             android:text="" />
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
