--- a/app/src/main/res/layout/activity_voted_posts.xml
+++ b/app/src/main/res/layout/activity_voted_posts.xml
@@ -30,7 +30,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:text="Profile"/>
+        android:text="Profile"
+        android:backgroundTint="@color/mainButton"
+        android:layout_marginLeft="5dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
